<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/header_background"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgVoltar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/ic_btn_voltar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|right"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingRight="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/back_ponto"
                    android:gravity="right|center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manrope_bold"
                        android:paddingLeft="10dp"
                        android:text="S:"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/nuSimulados"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="10dp"
                        android:text="10" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simulados"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/manrope_bold"
                android:layout_marginRight="16dp"
                android:text="Informações"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:fontFamily="@font/manrope_regular"
                android:textSize="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/info" />

            <Button
                android:id="@+id/btnNav"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/retangulo_branco_background"
                android:elevation="20dp"
                android:text="@string/navegao" />

            <Button
                android:id="@+id/btnMet"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/retangulo_branco_background"
                android:elevation="20dp"
                android:text="@string/meteorologia" />

            <Button
                android:id="@+id/btnTV"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/retangulo_branco_background"
                android:elevation="20dp"
                android:text="@string/teoria_de_voo" />

            <Button
                android:id="@+id/btnCT"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/retangulo_branco_background"
                android:elevation="20dp"
                android:text="@string/tecnicos" />

            <Button
                android:id="@+id/btnRTA"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/retangulo_branco_background"
                android:elevation="20dp"
                android:text="@string/regulamentos" />

            <Button
                android:id="@+id/btnAll"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/retangulo_branco_background"
                android:elevation="20dp"
                android:text="@string/todos" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>