<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".resultado.PontuacaoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background"
        android:elevation="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/voc_acertou"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="38sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pontuacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/_0"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="38sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/de"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="38sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/_0"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="38sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/questoesErradas"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btnFinal"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_azul"
        android:text="Finalizar"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />
</LinearLayout>